run fractional BM

--- a/examples/Shape stochastics - Functional shapes.ipynb
+++ b/examples/Shape stochastics - Functional shapes.ipynb
@@ -47,7 +47,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "theta, phi = shape_stochastics.make_grid(N=32) #Build a grid on the sphere with a given resolution given by N\n",
+    "theta, phi = shape_stochastics.make_grid(N=64) #Build a grid on the sphere with a given resolution given by N\n",
     "\n",
     "### Shape defined through 3 separated functions giving the xyz coordinates ###\n",
     "def sphere_function_x(theta, phi):\n",
@@ -61,23 +61,23 @@
     "\n",
     "n = 25 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER FOR ISOTROPIC NOISE !!!)\n",
     "Q = np.eye(n)\n",
-    "Q = np.diag(np.array([1/((k+2)*(k+1)) for k in range (0,n)]))"
+    "#Q = np.diag(np.array([1/((k+2)*(k+1)) for k in range (0,n)]))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 3,
    "id": "8e10876b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([0.00000000e+00, 1.01168322e-01, 2.01298520e-01, ...,\n",
-       "       2.00298223e-01, 1.00665594e-01, 1.21856125e-16])"
+       "array([0.00000000e+00, 4.98458857e-02, 9.95678466e-02, ...,\n",
+       "       9.94460170e-02, 4.97848950e-02, 1.22314834e-16])"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -88,59 +88,59 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "9996bfaf",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[ 8.56412533e-17,  1.01168322e-01,  2.01298520e-01, ...,\n",
-       "          2.00298223e-01,  1.00665594e-01,  6.37079957e-18],\n",
-       "        [ 1.46368130e-18, -7.05212640e-18, -2.64287051e-17, ...,\n",
-       "         -2.00428602e-02, -1.00731120e-02,  2.62851617e-18],\n",
-       "        [ 1.00000000e+00,  9.94869323e-01,  9.79529941e-01, ...,\n",
-       "         -9.79529941e-01, -9.94869323e-01, -1.00000000e+00]],\n",
+       "array([[[ 1.07570697e-17,  4.98458857e-02,  9.95678466e-02, ...,\n",
+       "          9.94460170e-02,  4.97848950e-02, -1.42261677e-17],\n",
+       "        [ 3.62425138e-18,  1.39199870e-18, -4.58861234e-19, ...,\n",
+       "         -4.92400040e-03, -2.46506447e-03,  4.19052257e-18],\n",
+       "        [ 1.00000000e+00,  9.98756921e-01,  9.95030775e-01, ...,\n",
+       "         -9.95030775e-01, -9.98756921e-01, -1.00000000e+00]],\n",
        "\n",
-       "       [[ 6.26584899e-02,  1.64000666e-01,  2.63821561e-01, ...,\n",
-       "          2.31991128e-01,  1.33247200e-01,  3.37139222e-02],\n",
-       "        [-5.99639645e-02, -5.97978029e-02, -5.95886383e-02, ...,\n",
-       "         -6.73824136e-02, -5.55798436e-02, -4.37424843e-02],\n",
-       "        [ 9.55105047e-01,  9.48073014e-01,  9.31096324e-01, ...,\n",
-       "         -9.92768882e-01, -1.00835061e+00, -1.01383021e+00]],\n",
+       "       [[ 7.55290432e-02,  1.23279509e-01,  1.70170003e-01, ...,\n",
+       "          5.76337169e-02,  9.51125408e-03, -3.91441888e-02],\n",
+       "        [-3.44543782e-02, -2.40404289e-02, -1.31129733e-02, ...,\n",
+       "          4.25506153e-02,  3.93215189e-02,  3.47324525e-02],\n",
+       "        [ 1.02214940e+00,  1.02308979e+00,  1.02066823e+00, ...,\n",
+       "         -1.06703940e+00, -1.07503076e+00, -1.07984717e+00]],\n",
        "\n",
-       "       [[-3.66860561e-03,  9.70347481e-02,  1.96277609e-01, ...,\n",
-       "          1.73887717e-01,  7.37193180e-02, -2.70989858e-02],\n",
-       "        [-6.13245588e-02, -5.91759626e-02, -5.68638376e-02, ...,\n",
-       "         -5.38317685e-02, -4.26034421e-02, -3.16505813e-02],\n",
-       "        [ 1.08035065e+00,  1.07280882e+00,  1.05550855e+00, ...,\n",
-       "         -8.60639759e-01, -8.77458047e-01, -8.83812409e-01]],\n",
+       "       [[ 9.96976519e-02,  1.40481264e-01,  1.79676948e-01, ...,\n",
+       "          3.65616168e-03, -5.20291325e-02, -1.08934562e-01],\n",
+       "        [-6.37582971e-02, -5.90225442e-02, -5.29195415e-02, ...,\n",
+       "          5.09752995e-02,  4.31808761e-02,  3.41153805e-02],\n",
+       "        [ 1.10408872e+00,  1.10603918e+00,  1.10357295e+00, ...,\n",
+       "         -9.63660387e-01, -9.67633782e-01, -9.69480733e-01]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[ 2.80927895e-01,  3.81166146e-01,  4.75755523e-01, ...,\n",
-       "          1.34495541e-01,  3.03170901e-02, -7.45940495e-02],\n",
-       "        [ 2.09516035e-02,  2.30189873e-02,  2.58214772e-02, ...,\n",
-       "         -4.89013407e-02, -3.74959420e-02, -2.35962529e-02],\n",
-       "        [ 1.32795111e+00,  1.31996739e+00,  1.30127790e+00, ...,\n",
-       "         -6.90990613e-01, -7.08568878e-01, -7.16394952e-01]],\n",
+       "       [[ 1.62761335e-01,  2.10772832e-01,  2.57978111e-01, ...,\n",
+       "         -9.17500334e-02, -1.49542548e-01, -2.08005120e-01],\n",
+       "        [-1.77544769e-02, -2.49162388e-02, -2.98644355e-02, ...,\n",
+       "         -4.53840904e-02, -7.25343810e-02, -9.91639618e-02],\n",
+       "        [ 1.12366033e+00,  1.12019098e+00,  1.10878051e+00, ...,\n",
+       "         -7.47294780e-01, -7.47778473e-01, -7.49844163e-01]],\n",
        "\n",
-       "       [[ 3.19563921e-01,  4.20554031e-01,  5.15533278e-01, ...,\n",
-       "          1.24714761e-01,  1.99866868e-02, -8.51859054e-02],\n",
-       "        [ 6.66051556e-02,  6.65855842e-02,  6.71453637e-02, ...,\n",
-       "         -3.79710239e-02, -2.46698478e-02, -8.27391965e-03],\n",
-       "        [ 1.35914272e+00,  1.35096746e+00,  1.33230402e+00, ...,\n",
-       "         -6.73968909e-01, -6.91530780e-01, -6.99066699e-01]],\n",
+       "       [[ 1.03461748e-01,  1.54506568e-01,  2.04547548e-01, ...,\n",
+       "         -1.82034483e-01, -2.40625183e-01, -2.99037454e-01],\n",
+       "        [-2.98145093e-03, -7.35229279e-03, -9.82901985e-03, ...,\n",
+       "         -5.70072851e-02, -8.18734407e-02, -1.06148596e-01],\n",
+       "        [ 1.11290857e+00,  1.10206333e+00,  1.08371336e+00, ...,\n",
+       "         -7.48655417e-01, -7.53691205e-01, -7.60236375e-01]],\n",
        "\n",
-       "       [[ 3.22406377e-01,  4.23954037e-01,  5.19262820e-01, ...,\n",
-       "          1.09444197e-01,  4.62382009e-03, -1.00338082e-01],\n",
-       "        [ 5.26848716e-02,  5.14325282e-02,  5.07464013e-02, ...,\n",
-       "         -5.44615264e-02, -4.05095218e-02, -2.33845172e-02],\n",
-       "        [ 1.33357088e+00,  1.32436900e+00,  1.30473572e+00, ...,\n",
-       "         -7.39826619e-01, -7.58131850e-01, -7.66043363e-01]]])"
+       "       [[ 4.91438141e-02,  1.05803897e-01,  1.62315143e-01, ...,\n",
+       "         -1.84948781e-01, -2.41927313e-01, -2.97861595e-01],\n",
+       "        [-3.17196524e-02, -2.89096842e-02, -2.39072364e-02, ...,\n",
+       "         -1.05889866e-01, -1.21896919e-01, -1.37218714e-01],\n",
+       "        [ 1.18386101e+00,  1.17476266e+00,  1.15521498e+00, ...,\n",
+       "         -7.40562992e-01, -7.37146084e-01, -7.36344626e-01]]])"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -148,8 +148,8 @@
    "source": [
     "### Compute the Q-Wiener process and output the list of meshes during the process and a .gif file \n",
     "shape_stochastics.compute_wiener_process(sphere_function_x, sphere_function_y, sphere_function_z,\n",
-    "                                         theta = theta, phi = phi, Q = Q, n = n, t=120, n_step=50, make_gif = True,\n",
-    "                                         file_dir = \"tests/wiener_process_fshape\", file_name = \"Q_squared_225coeffs.gif\")"
+    "                                         theta = theta, phi = phi, Q = Q, n = n, t=1, n_step=10, make_gif = True,\n",
+    "                                         file_dir = \"tests/wiener_process\", file_name = \"test.gif\")"
    ]
   },
   {
@@ -268,12 +268,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 11,
    "id": "e58ff834",
    "metadata": {},
    "outputs": [],
    "source": [
-    "theta, phi = shape_stochastics.make_grid(N=32) #Build a grid on the sphere with a given resolution given by N\n",
+    "theta, phi = shape_stochastics.make_grid(N=64) #Build a grid on the sphere with a given resolution given by N\n",
     "\n",
     "### Shape defined through 3 separated functions giving the xyz coordinates ###\n",
     "def sphere_function_x(theta, phi):\n",
@@ -287,76 +287,75 @@
     "\n",
     "n = 49 #choose a resolution for the sph decomposition (HAS TO BE A SQUARED NUMBER FOR ISOTROPIC NOISE !!!)\n",
     "#Q = np.eye(n)\n",
-    "lambdas = np.array([1/np.sqrt(1 + (k+2)*(k+1)) for k in range (0,n)])\n",
+    "lambdas = np.array([1/np.sqrt((k+2)*(k+1)) for k in range (0,n)])\n",
     "Q = np.diag(lambdas)\n",
-    "H = 0.8"
+    "H = 0.3"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 12,
    "id": "c9df67aa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[[-0.01157019,  0.08891386,  0.18916498, ...,  0.19565624,\n",
-       "          0.09600299, -0.00489842],\n",
-       "        [-0.00194447, -0.00136364, -0.00174598, ..., -0.03076983,\n",
-       "         -0.01945875, -0.00832936],\n",
-       "        [ 1.00551611,  1.00021957,  0.98571386, ..., -0.97274034,\n",
-       "         -0.98982928, -0.99553808]],\n",
+       "array([[[ 7.87564055e-02,  1.16987424e-01,  1.55600750e-01, ...,\n",
+       "          1.06330696e-01,  5.30669793e-02, -8.93868278e-04],\n",
+       "        [-2.05907582e-02, -1.85776021e-02, -1.68710860e-02, ...,\n",
+       "         -9.33046076e-02, -9.51546330e-02, -9.72117061e-02],\n",
+       "        [ 9.71414667e-01,  9.75990264e-01,  9.78917366e-01, ...,\n",
+       "         -9.51719308e-01, -9.58759518e-01, -9.63004456e-01]],\n",
        "\n",
-       "       [[-0.02446628,  0.07681729,  0.17817893, ...,  0.1991581 ,\n",
-       "          0.09817155, -0.00445013],\n",
-       "        [-0.01249118, -0.01285297, -0.01389625, ..., -0.03375577,\n",
-       "         -0.02048036, -0.00745286],\n",
-       "        [ 0.9880634 ,  0.98351583,  0.97052573, ..., -0.96378703,\n",
-       "         -0.98159799, -0.98764752]],\n",
+       "       [[ 8.38134376e-02,  1.21501153e-01,  1.58800704e-01, ...,\n",
+       "          9.72319814e-02,  4.49902572e-02, -7.20422577e-03],\n",
+       "        [ 1.38284688e-02,  2.07172503e-02,  2.59712636e-02, ...,\n",
+       "         -3.08180274e-02, -2.72788451e-02, -2.40754587e-02],\n",
+       "        [ 1.17386283e+00,  1.17499879e+00,  1.17331390e+00, ...,\n",
+       "         -9.46842133e-01, -9.49985898e-01, -9.50076221e-01]],\n",
        "\n",
-       "       [[-0.04376678,  0.05590322,  0.15660548, ...,  0.20551563,\n",
-       "          0.10498139,  0.00121283],\n",
-       "        [-0.01417161, -0.01383798, -0.01474358, ..., -0.03653842,\n",
-       "         -0.02346936, -0.00994363],\n",
-       "        [ 0.97689044,  0.9732451 ,  0.96180918, ..., -0.95550818,\n",
-       "         -0.9754243 , -0.98281392]],\n",
+       "       [[ 1.34521626e-01,  1.70958084e-01,  2.06424671e-01, ...,\n",
+       "          7.01481989e-02,  1.39801689e-02, -4.26176962e-02],\n",
+       "        [-7.05105428e-02, -6.64471008e-02, -6.18666449e-02, ...,\n",
+       "         -8.47540148e-02, -8.39840217e-02, -8.31720295e-02],\n",
+       "        [ 1.26603752e+00,  1.25573452e+00,  1.24180080e+00, ...,\n",
+       "         -9.73186110e-01, -9.76858371e-01, -9.77407241e-01]],\n",
        "\n",
        "       ...,\n",
        "\n",
-       "       [[-0.02487614,  0.02356416,  0.0722855 , ...,  0.49564315,\n",
-       "          0.38433669,  0.2611912 ],\n",
-       "        [ 0.16478301,  0.18556806,  0.18366194, ...,  0.07225697,\n",
-       "          0.10712892,  0.13396795],\n",
-       "        [ 0.82908347,  0.77971422,  0.74670181, ..., -0.89396139,\n",
-       "         -0.958441  , -0.99638529]],\n",
+       "       [[-1.00989378e-01, -6.76531125e-02, -2.66627174e-02, ...,\n",
+       "         -1.47739922e-01, -2.12261938e-01, -2.72571485e-01],\n",
+       "        [ 3.95616887e-01,  4.00751318e-01,  4.08983374e-01, ...,\n",
+       "          9.44281747e-02,  8.43476288e-02,  7.64543409e-02],\n",
+       "        [ 1.29917309e+00,  1.27179179e+00,  1.23883926e+00, ...,\n",
+       "         -1.06601286e+00, -1.06179205e+00, -1.05574276e+00]],\n",
        "\n",
-       "       [[-0.0213946 ,  0.02752902,  0.07613557, ...,  0.50337653,\n",
-       "          0.3934104 ,  0.27112155],\n",
-       "        [ 0.1602397 ,  0.18307763,  0.1822343 , ...,  0.06270266,\n",
-       "          0.09615329,  0.12188025],\n",
-       "        [ 0.81580347,  0.76540835,  0.73194728, ..., -0.89579303,\n",
-       "         -0.96149196, -1.0005093 ]],\n",
+       "       [[-6.37806648e-02, -2.68200368e-02,  1.74321464e-02, ...,\n",
+       "         -2.75364151e-01, -3.37368943e-01, -3.93915159e-01],\n",
+       "        [ 2.77307625e-01,  2.79736900e-01,  2.86270343e-01, ...,\n",
+       "          9.99188000e-02,  9.54092025e-02,  9.28067525e-02],\n",
+       "        [ 1.32213188e+00,  1.29239506e+00,  1.25674396e+00, ...,\n",
+       "         -1.12141040e+00, -1.11646894e+00, -1.10946138e+00]],\n",
        "\n",
-       "       [[-0.01787849,  0.03227234,  0.08254752, ...,  0.49537337,\n",
-       "          0.38491008,  0.26314816],\n",
-       "        [ 0.16818156,  0.18998881,  0.18830454, ...,  0.06136484,\n",
-       "          0.09429899,  0.11955112],\n",
-       "        [ 0.78114956,  0.72900916,  0.6942282 , ..., -0.9057075 ,\n",
-       "         -0.97025908, -1.00832941]]])"
+       "       [[-1.42915517e-01, -1.04365754e-01, -5.80096130e-02, ...,\n",
+       "         -3.94338900e-01, -4.56899796e-01, -5.14117761e-01],\n",
+       "        [ 3.23571240e-01,  3.25294560e-01,  3.30357479e-01, ...,\n",
+       "          2.91256691e-02,  2.33919053e-02,  1.95568830e-02],\n",
+       "        [ 1.36771961e+00,  1.33957626e+00,  1.30607507e+00, ...,\n",
+       "         -1.03735111e+00, -1.03314466e+00, -1.02720244e+00]]])"
       ]
      },
-     "execution_count": 26,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "### Compute the Q-Wiener process and output the list of meshes during the process and a .gif file \n",
-    "### RUN TWICE\n",
     "shape_stochastics.compute_fractional_process(sphere_function_x, sphere_function_y, sphere_function_z,\n",
-    "                                         theta = theta, phi = phi, Q = Q, H = H, n = n, t=1, n_step=50, make_gif = True,\n",
-    "                                         file_dir = \"tests/fractional_process_fshape\", file_name = \"Q_Bessel_49_H0-8coeffs.gif\")"
+    "                                         theta = theta, phi = phi, Q = Q, H = H, n = n, t=1.2, n_step=50, make_gif = True,\n",
+    "                                         file_dir = \"tests/fractional_process_fshape\", file_name = \"test.gif\")"
    ]
   },
   {
